src/objects/ClaimEU261__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting used to store the rules for ClaimsEU261 community. Rules used to calculate compensations.</description>
    <fields>
        <fullName>Claim_type__c</fullName>
        <label>Claim type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompensationAmount__c</fullName>
        <label>CompensationAmount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DelayFlightSection__c</fullName>
        <defaultValue>&apos;123&apos;</defaultValue>
        <description>Flight section that caused the delay</description>
        <inlineHelpText>Flight section that caused the delay</inlineHelpText>
        <label>DelayFlightSection</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DelayTime__c</fullName>
        <description>How long was the flight delayed on arrival at final destination?</description>
        <label>DelayTime</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the result.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExtraCircun__c</fullName>
        <description>Were there extraordinary circumstances for the Claim EU261?</description>
        <inlineHelpText>Were there extraordinary circumstances for the Claim EU261?</inlineHelpText>
        <label>Extraordinary Circunstance</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Arrival_Airport_EU__c</fullName>
        <label>Is Arrival Airport from EU?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Carrier_from_EU__c</fullName>
        <label>Is Carrier from EU?</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Connecting_Airport_EU__c</fullName>
        <defaultValue>(&quot;Z&quot;)</defaultValue>
        <label>Is Connecting Airport from EU?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Departure_Airline_EU__c</fullName>
        <label>Is Departure Airport from EU?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Distance__c</fullName>
        <label>Max_Distance</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Distance__c</fullName>
        <description>Flight end to end distance.</description>
        <label>Min_Distance</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>referenceURL__c</fullName>
        <description>URL to redirect user to specific case.</description>
        <label>referenceURL</label>
        <type>Url</type>
    </fields>
    <label>ClaimEU261Rules</label>
</CustomObject>